=== Desk Mess Mirrored ===
== Version 2.0.3 ==
Changelog: March 4, 2012
= CSS =
* Corrected issue with comments meta showing list bullet

/** ------------------------------------------------------------------------- */

== Version 2.0.2 ==
Changelog: March 1, 2012
= Code =
* Un-wrapped the `register_nav_menu` call

= Miscellaneous =
* Added additional screenshots
* Updated 'readme.txt' with a Screenshot section and relevant descriptions

/** ------------------------------------------------------------------------- */

== Version 2.0.1 ==
Changelog: February 15, 2012
= Code =
* Fixed display issue when widget title was empty - see `dmm_widget_title`

= CSS =
* Added z-index to "cup" to keep it on top of "sticky notes"
* Adjusted `#logo h2` element text position higher for better cross-browser compatibility

= Miscellaneous =
* Updated 'readme.txt' with a "Licensing" section
* Updated 'readme.txt' explaining the relevance and possible usage of the 'Page Link' shortlink found on pages.

= Internet Browsers Reviewed =
* Apple Safari v5.1.2
* Firefox v10.0.1
* Google Chrome v17.0
* Internet Explorer v9.0
* Opera v11.61

/** ------------------------------------------------------------------------- */

== Version 2.0 ==
Changelog: January 9, 2012
= Code =
* Added additional PHPDoc style documentation
* Added `DMM WP Title` - utilizes the `wp_title` filter to add text to the default title output
* Added `DMM Use Posted` function for posts without titles
* Added minimal doc-block to each template file as relevant
* Added 'desk-mess-mirrored' loop template
* Added 'dmm-navigation' and implemented in 404, index, archive, and author template files
* Added post-formats: aside, quote, and status
* Added clearing `div` at top of 'author' and 'page' templates
* Added project TODO section to 'index.php'
* Added `DMM Add Body Classes` - Adds additional classes to the core `body_class` function