@@ -221,32 +221,29 @@ if ( ! function_exists( 'dmm_dynamic_copyright' ) ) {
  * noted in the Child-Theme details) in the footer area of the theme.
  *
  * @package Desk_Mess_Mirrored
- * @since 1.4.5
+ * @since   1.4.5
  *
  * Last revised April 5, 2012
  * @version 2.0.3
- * @todo fix get_theme_data deprecations
+ * Replaced deprecated `get_theme_data` at WordPress version 3.4-beta1
  */
 if ( ! function_exists( 'dmm_theme_version' ) ) {
     function dmm_theme_version () {
-            /** Get details of the theme / child theme */
-            $blog_css_url = get_stylesheet_directory() . '/style.css';
-            $active_theme_data = get_theme_data( $blog_css_url );
-
-            $parent_blog_css_url = get_template_directory() . '/style.css';
-            $parent_theme_data = get_theme_data( $parent_blog_css_url );
-
+            /** @var $active_theme_data - array object containing the current theme's data */
+            $active_theme_data = wp_get_theme();
             if ( is_child_theme() ) {
-                printf( __( '<br /><span id="dmm-theme-version">This site is using the %1$s Child-Theme, v%2$s, on top of
-                <br />the Parent-Theme %3$s, v%4$s, from <a href="http://buynowshop.com/" title="BuyNowShop.com">BuyNowShop.com</a>.</span>', 'desk-mess-mirrored' ),
-                    '<a href="' . $active_theme_data['URI'] . '">' . $active_theme_data['Name'] . '</a>',
-                    $active_theme_data['Version'],
-                    $parent_theme_data['Name'],
-                    $parent_theme_data['Version'] );
+                /** @var $parent_theme_data - array object containing the Parent Theme's data */
+                $parent_theme_data = $active_theme_data->parent();
+                /** @noinspection PhpUndefinedMethodInspection - IDE commentary */
+                printf( __( '<br /><span id="dmm-theme-version">This site is using the %1$s Child-Theme, v%2$s, on top of<br />the Parent-Theme %3$s, v%4$s, from <a href="http://buynowshop.com/" title="BuyNowShop.com">BuyNowShop.com</a>.</span>', 'desk-mess-mirrored' ),
+                    '<a href="' . $active_theme_data->get( 'ThemeURI' ) . '">' . $active_theme_data->get( 'Name' ) . '</a>',
+                    $active_theme_data->get( 'Version' ),
+                    $parent_theme_data->get( 'Name' ),
+                    $parent_theme_data->get( 'Version' ) );
             } else {
                 printf( __( '<br /><span id="dmm-theme-version">This site is using the %1$s theme, v%2$s, from <a href="http://buynowshop.com/" title="BuyNowShop.com">BuyNowShop.com</a>.</span>', 'desk-mess-mirrored' ),
-                    $active_theme_data['Name'],
-                    $active_theme_data['Version'] );
+                    $active_theme_data->get( 'Name' ),
+                    $active_theme_data->get( 'Version' ) );
             }
     }
 }
